Findbugs fix.